fix navbar positioning on smaller screens

--- a/css/rhj.css
+++ b/css/rhj.css
@@ -69,3 +69,7 @@ section {
 .photo	{
 	margin-top: 20px;
 }
+
+.navbar-right {
+	float: right!important;
+}
